--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
-  "name": "merng",
+  "name": "twitter-clone-mern-g",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "node index",
-    "start": "node index"
+    "start": "node index",
+    "server": "nodemon index",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
-  "author": "",
+  "author": "Arman Abkar",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.5.0",
+    "apollo-server": "^2.19.0",
     "bcryptjs": "^2.4.3",
     "graphql": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.11"
   },
   "devDependencies": {
+    "concurrently": "^5.3.0",
     "nodemon": "^1.19.1"
   }
 }
